# growthOS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  brand-voice.example.yaml  docker-compose.yml  install.sh  package-lock.json  package.json  plugin.json  pyproject.toml  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  deploy.yml
agents/: README.md
agents/carousel-designer/: AGENT.md  README.md
agents/cmo/: AGENT.md  README.md  router.md
agents/content-creator/: AGENT.md  README.md
boletim/: ARCO-NARRATIVO.md  SOURCES.md  TEMPLATE.md  cover-template.html
commands/: README.md
deploy/: .env.production.example  Caddyfile  Dockerfile.publisher  Dockerfile.queue  Dockerfile.review  README.md  docker-compose.prod.yml
design-intelligence/: DESIGN-DOCTRINE.md  INDEX.md
docs/: README.md  output-contracts.md
hooks/: README.md  audit-logger.md  circuit-breaker.md  dry-run-guard.md  preview-before-publish.md
mcp-servers/: README.md
publisher/: README.md  ig_publisher.py  manual_login.py  setup_wizard.py
remotion/: Root.tsx  package-lock.json  package.json  tsconfig.json  types.ts
review-server/: README.md  server.py
sales-page-preview/: server.py
scripts/: README.md  asset-indexer.py  asset-vision.py  export-carousel.mjs  export_carousel.py  generate_caption.py  organize-approved.py  process-revision.py  sales-page-qa.py  ship-queue.py  sync-plugin.sh  update-profile.py
shared-lib/: README.md
skills/: README.md
templates/: README.md
(+185 files in other folders)
